# anon_chat

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: Dockerfile  db.sqlite3  fast_start.sh  pyproject.toml  test_flow.py
backend/chat/: consumers.py  models.py
backend/chat/migrations/: 0001_initial.py  0002_initial.py  0003_remove_message_receiver_message_room.py
backend/common/: auth.py
backend/core/: asgi.py  routing.py  settings.py  urls.py
backend/users/: models.py  serializers.py  services.py  views.py
backend/users/migrations/: 0001_initial.py  0002_remove_user_is_online_remove_user_last_seen.py
frontend/: Dockerfile  next.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/utils/: api.ts  crypto.ts  websocket.ts
